terraform-basic-setup/security-groups.tf
resource "aws_security_group" "acesso_ssh_icmp_publico-us" {
  provider = aws.us-east-1
  name        = "acesso_ssh_icmp_publico"
  description = "acesso_ssh_icmp_publico"

  ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "acesso_ssh_icmp_publico"
  }
}

resource "aws_security_group" "acesso_ssh_icmp_publico" {
  name        = "acesso_ssh_icmp_publico"
  description = "acesso_ssh_icmp_publico"

  ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "acesso_ssh_icmp_publico"
  }
}

resource "aws_security_group" "acesso_ssh_icmp_privado" {
  name        = "acesso_ssh_icmp_privado"
  description = "acesso_ssh_icmp_privado"

  ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "acesso_ssh_icmp_privado"
  }
}
